--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   shared_preferences: ^2.5.3
   provider: ^6.1.5
   url_launcher: ^6.3.2
+  printing: ^5.14.2
+  pdf: ^3.11.3
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
